tests/errors/sem.not-enough-args.directive-call.or
main :: () -> void {
    @fficall "libraylib.a";
};
